The loader is basically functional

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
-*.gz
-*.class
+.gz
+.class
+.classpath
+.project
+.cache
+.settings
+.idea
+.idea_modules
+*.swp
+application.conf
+wetpath_loader/target/
+wetpath_loader/bin/
+/bin-test-lib
+target/
+/bin
+/node_modules
