--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,12 @@ application.conf
 wetpath_loader/target/
 wetpath_loader/bin/
 /bin-test-lib
-target/
+target/*
 /bin
 /node_modules
+/createcorpus/project/project/
+/createcorpus/project/target/
+/createcorpus/target/
+/warcparser/target/
+/warcparser/project/project/
+/warcparser/project/target/
